# test_xsimd_dynamic_dispatch

./: meson.build
.github/workflows/: CI.yml
include/: simd_impl.hpp
src/: simd_arch.cpp  simd_dispatch.cpp  test_xsimd_dynamic_dispatch.cpp
